<resources>
    <string name="app_name">GastosDeLaCasaApp</string>
    <string name="apellido">Apellido</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="contrasena">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="nombre">Nombre</string>
    <string name="o">O</string>
    <string name="ajustes">Ajustes</string>
    <string name="introduce_la_cantidad_a_pagar">Introduce la cantidad a pagar, €</string>
    <string name="agua">Agua</string>
    <string name="calcular">Calcular</string>
    <string name="electricidad">Electricidad</string>
    <string name="gas">Gas</string>
    <string name="separacion1">_________________________________________________________</string>
    <string name="total">Total</string>
    <string name="todo1">TODO</string>
    <string name="electricity">Electricity</string>
    <string name="todo2">TODO</string>
    <string name="factura_id">Factura : id</string>
    <string name="gas2">Gas</string>
    <string name="editar">editar</string>
    <string name="eliminar">eliminar</string>
    <string name="todo4">TODO</string>
    <string name="water">Water</string>
    <string name="editar2">Editar</string>
    <string name="eliminar2">Eliminar</string>
    <string name="button">Button</string>
    <string name="anadir">Añadir</string>
    <string name="mas1">+</string>
    <string name="mas2">+</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="editarbotton">editarBotton</string>
    <string name="eliminarbutton">eliminarButton</string>
    <string name="ver_facturas">Ver facturas</string>
    <string name="crear_factura">Crear factura</string>
    <string name="voler">Voler</string>
    <string name="volver">Volver</string>
    <string name="total2">TOTAL</string>
    <string name="crear_factura1">Crear factura</string>
    <string name="editarbutton1">editarButton</string>
    <string name="eliminatbutton1">eliminatButton</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="crear_cuenta3">Crear cuenta</string>
    <string name="contrasena3">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre_usuario3">Nombre usuario</string>
    <string name="botonvolver">botonVolver</string>
    <string name="volver2">volver</string>
</resources>