<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/idFacturaTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/factura_id"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/electricityImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/electricityTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/idFacturaTextView"
        app:srcCompat="@drawable/electricity"
        android:contentDescription="@string/todo1" />

    <TextView
        android:id="@+id/electricityTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/electricity"
        app:layout_constraintBottom_toBottomOf="@+id/electricityImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/electricityImageView"
        app:layout_constraintTop_toTopOf="@+id/electricityImageView" />

    <ImageView
        android:id="@+id/gasImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/electricityImageView"
        app:srcCompat="@drawable/fire"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/gasTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gas2"
        app:layout_constraintBottom_toBottomOf="@+id/gasImageView"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toEndOf="@+id/gasImageView"
        app:layout_constraintTop_toTopOf="@+id/gasImageView" />

    <ImageView
        android:id="@+id/waterImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/gasImageView"
        app:srcCompat="@drawable/water"
        android:contentDescription="@string/todo4" />

    <TextView
        android:id="@+id/waterTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/water"
        app:layout_constraintBottom_toBottomOf="@+id/waterImageView"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toEndOf="@+id/waterImageView"
        app:layout_constraintTop_toTopOf="@+id/waterImageView" />

    <ImageView
        android:id="@+id/editarImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/waterImageView"
        app:srcCompat="@drawable/editar"
        android:contentDescription="@string/todo6" />

    <ImageView
        android:id="@+id/eliminarImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editarImageView"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/editarImageView"
        app:layout_constraintTop_toTopOf="@+id/editarImageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/delete_24px"
        android:contentDescription="@string/todo7" />

</androidx.constraintlayout.widget.ConstraintLayout>